# taskboard

./: .env_example  Dockerfile  README.md  docker-compose.yml  init_db.py  pyproject.toml
src/app/: main.py
src/app/api/v1/: login.py  logout.py  task.py  user_settings.py  users.py
src/app/core/: cache.py  config.py  database.py
src/app/dtos/: user_detail.py
src/app/models/: role.py  task.py  user.py
src/app/repositories/: cache_repository.py  task_repository.py  user_repository.py
src/app/schemas/: base_response.py  login.py  task.py  user.py
src/app/services/: cache_service.py  login_service.py  task_service.py  user_service.py
src/app/static/css/: sb-admin-2.css  style.css
src/app/static/js/: app.js  main.js
src/app/templates/login/: login.html
src/app/templates/mainBoard/: mainBoard.html
src/app/templates/main_board/: main_board.html
src/app/templates/mainboard/: mainboard.html
src/app/templates/sign_up/: sign_up.html
src/app/templates/user_settings/: user_settings.html
src/app/templates/users/: list.html
src/app/web/: login.py  main_board.py  sign_up.py  user_settings.py  users.py
tests/app/api/v1/: test_login.py  test_logout.py  test_task.py  test_user_settings.py  test_users.py
tests/app/repositories/: test_cache_repository.py  test_task_repository.py  test_user_repository.py
tests/app/services/: test_cache_service.py  test_login_service.py  test_task_service.py  test_user_service.py
